# nifi

./: .asf.yaml  .cursorrules  .dockerignore  .editorconfig  .gitattributes  .gitignore  .grype.yaml  .travis-output-filters  .travis.sh  .travis.yml  0001-NIFI-3649-Buffer-node-responses-when-replicating-HTT.patch  AGENTS.md  DISCLAIMER  KEYS  LICENSE  NIFI-1922-patch  NOTICE  README.md  README_ZhCN.md  README_es_ES.md  SECURITY.md  appveyor.yml  checkstyle-suppressions.xml  checkstyle.xml  checkstyleCache  codecov.yml  doap.rdf  leeme.md  mvnw  mvnw.cmd  package-lock.json  package.json  pmd-ruleset.xml  pom.xml  readme  requirements.txt
.cursor/rules/: best-practices.mdc  building.mdc  code-style.mdc  comments.mdc  ending-conditions.mdc  extension-development.mdc  extension-testing.mdc  framework-testing.mdc  persona.mdc  system-test-troubleshooting-archive.mdc  testing-standards.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: collect-system-tests-coverage.sh
.github/workflows/: build.yml  ci-workflow.yml  code-compliance.yml  code-coverage.yml  dependency-check.yml  docker-push.yaml  docker-tests.yml  integration-tests.yml  maven-settings.xml  stale.yml  system-tests.yml  test-report.yml
assemblies/nifi/: pom.xml
assembly/: pom.xml
c2/: pom.xml  pom.xml.versionsBackup
c2/c2-client-bundle/: README.md  pom.xml
c2/c2-protocol/: pom.xml  pom.xml.versionsBackup
commons/: pom.xml
commons/core-flowfile-attributes/: pom.xml
commons/data-provenance-utils/: pom.xml
commons/flowfile-packager/: pom.xml
commons/nifi-file-utils/: pom.xml
jenkinsfile/: build.groovy
maven-plugins/: pom.xml
minifi/: KEYS  NOTICE  README.md  pom.xml  pom.xml.versionsBackup
minifi-api/: pom.xml
minifi-assembly/: LICENSE  NOTICE  README.md  pom.xml
minifi-bootstrap/: pom.xml
minifi-c2/: README.md  c2-integration-test.graphml  pom.xml
minifi-commons/: pom.xml
minifi-docker/: README.md  pom.xml
minifi-docs/: NOTICE  Properties_Guide.md  System_Admin_Guide.md  pom.xml
minifi-framework/: pom.xml
minifi-integration-tests/: pom.xml
minifi-nar-bundles/: pom.xml
minifi-toolkit/: pom.xml
misc/: build-order.sh  pom.xml
nar-bundles/: pom.xml
nar-maven-plugin/: pom.xml
nifi/: LICENSE  NOTICE  README.md  pom.xml
nifi-api/: pom.xml
nifi-assemblies/: pom.xml
nifi-assembly/: LICENSE  NOTICE  README.md  pom.xml  pom.xml.orig  pom.xml.versionsBackup
nifi-bom/: pom.xml
nifi-bootstrap/: pom.xml  pom.xml.versionsBackup
nifi-code-coverage/: pom.xml
nifi-commons/: pom.xml  pom.xml.versionsBackup
nifi-commons/nifi-pmem/src/main/c/: CMakeLists.txt  PmemMappedFile.c
nifi-connector-mock-bundle/: pom.xml
nifi-connectors/: pom.xml
nifi-dependency-check-maven/: suppressions.xml
nifi-docker/: .dockerignore  README.md  pom.xml  pom.xml.versionsBackup
nifi-docs/: LICENSE  NOTICE  pom.xml
nifi-documentation-plugin/: pom.xml
nifi-extension-bom/: pom.xml
nifi-extension-bundles/: pom.xml
nifi-external/: README.md  pom.xml  pom.xml.versionsBackup
nifi-fn/: .dockerignore  Dockerfile  README.md  pom.xml
nifi-framework-api/: pom.xml  pom.xml.versionsBackup
nifi-framework-bundle/: pom.xml
nifi-frontend/: pom.xml
nifi-frontend-react/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
nifi-h2/: pom.xml
nifi-h2-database-migrator/: pom.xml
nifi-h2-database-updater/: pom.xml
nifi-manifest/: pom.xml
nifi-maven-archetypes/: pom.xml  pom.xml.versionsBackup
nifi-mock/: pom.xml  pom.xml.versionsBackup
nifi-nar-bundles/: pom.xml
nifi-nar-bundles/nifi-py4j-bundle/nifi-python-extension-api/src/main/python/: pyproject.toml
nifi-nar-bundles/nifi-py4j-bundle/nifi-python-extension-api/src/main/python/src/nifiapi/: __jvm__.py  documentation.py  flowfiletransform.py  logging.py  properties.py  recordtransform.py  relationship.py
nifi-nar-maven-plugin/: NOTICE  README.md  pom.xml
nifi-parent/: DISCLAIMER  README.md  pom.xml
nifi-python-extensions/: pom.xml
nifi-registry/: NIFI-8843-HA-Design.md  NOTICE  README.md  build-and-run.sh  checkstyle.xml  pom.xml  pom.xml.versionsBackup  stop.sh
nifi-server-api/: pom.xml  pom.xml.versionsBackup
nifi-site/: Gruntfile.js  README.md  bower.json  config.rb  package.json
nifi-stateless/: Dockerfile  README.md  pom.xml
nifi-system-tests/: pom.xml
nifi-test/: pom.xml
nifi-testharness/: .gitignore  pom.xml
nifi-toolkit/: pom.xml  pom.xml.versionsBackup
nifi-versioned-components/: pom.xml
(+35105 files in other folders)
